--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,6 +3,7 @@ name = "speeds"
 version = "0.1.0"
 description = "A small program for graphing cable modem speeds"
 authors = ["Ben Steinberg <bsteinberg@law.harvard.edu>"]
+license = "GPL-3.0-only"
 
 [tool.poetry.dependencies]
 python = "^3.7"
